# Discord-Handler-Rs

./: .env.example  .gitignore  Cargo.toml  README.md
src/: bot.rs  config.rs  main.rs
src/commands/prefix/public/: ping.rs
src/commands/slash/public/: ping.rs
src/core/: command_utils.rs  cooldown.rs  emojis.rs  error_webhook.rs  join_guild_webhook.rs  leave_guild_webhook.rs  mod.rs  prefix_command_webhook.rs  ready_webhook.rs  slash_command_webhook.rs  webhooks.rs
src/database/: mongo.rs
src/events/: error.rs  guild_create.rs  guild_delete.rs  interaction_create.rs  message_create.rs  mod.rs  ready.rs
src/handlers/: anticrash.rs  commands.rs  events.rs  logger.rs  mod.rs  models.rs  prefix.rs
src/models/: user.rs
