[package]
name = "discord-handler-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", features = ["rustls_backend", "gateway"] }
tokio = { version = "1", features = ["full"] }
mongodb = { version = "3", features = ["tokio-runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
owo-colors = "4"
futures = "0.3"
